--- a/config.json
+++ b/config.json
@@ -16,10 +16,10 @@
     "EMAIL": "",
     "PASSWORD": "",
     "OTPKEY": "",
-    "BOTNAME": "🌶️𝐁𝐚𝐬𝐚𝐧𝐭𝐢 𝐭𝐞𝐫𝐢 𝐦𝐚𝐮𝐭🌶️",
+    "BOTNAME": "𝔸𝕒𝕚𝕫𝕦 ℕ𝕖𝕙𝕦",
     "PREFIX": ".",
     "ADMINBOT": [
-        "100007462306517"
+        "100048139491479"
         
     ],
     "NDH": [
